# src/main/java/com/rajharit/rajharitsprings/controllers/DishController.java
@@ -1,31 +1,33 @@
 package com.rajharit.rajharitsprings.controllers;
 
-import com.rajharit.rajharitsprings.entities.Dish;
+import com.rajharit.rajharitsprings.dtos.DishDto;
+import com.rajharit.rajharitsprings.dtos.DishIngredientDto;
 import com.rajharit.rajharitsprings.services.DishService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
 @RestController
-@RequestMapping("/api")
+@RequestMapping("/dishes")
 public class DishController {
+    private final DishService dishService;
 
-    @Autowired
-    private DishService dishService;
+    public DishController(DishService dishService) {
+        this.dishService = dishService;
+    }
 
-    @GetMapping("/dishes")
-    public ResponseEntity<List<Dish>> getAllDishes() {
-        List<Dish> dishes = dishService.getAllDishesWithDetails();
+    @GetMapping
+    public ResponseEntity<List<DishDto>> getAllDishes() {
+        List<DishDto> dishes = dishService.getAllDishes();
         return ResponseEntity.ok(dishes);
     }
 
-    @PutMapping("/dishes/{id}/ingredients")
-    public ResponseEntity<Void> updateDishIngredients(
+    @PutMapping("/{id}/ingredients")
+    public ResponseEntity<DishDto> updateDishIngredients(
             @PathVariable int id,
-            @RequestBody List<DishIngredient> ingredients) {
-        dishService.updateDishIngredients(id, ingredients);
-        return ResponseEntity.ok().build();
+            @RequestBody List<DishIngredientDto> ingredients) {
+        DishDto updatedDish = dishService.updateDishIngredients(id, ingredients);
+        return ResponseEntity.ok(updatedDish);
     }
 }
