# src/main/java/com/rajharit/rajharitsprings/dtos/DishDto.java
@@ -1,4 +1,12 @@
 package com.rajharit.rajharitsprings.dtos;
 
+import lombok.Data;
+import java.util.List;
+
+@Data
 public class DishDto {
+    private int id;
+    private String name;
+    private double unitPrice;
+    private List<DishIngredientDto> ingredients;
 }
